--- a/index.html
+++ b/index.html
@@ -1,135 +1,16 @@
-<!DOCTYPE html> 
-<html> 
-<head> 
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="mobile-web-app-capable" content="yes">
-<style> 
-canvas { 
-    border:1px solid #d3d3d3; 
-    background-color: #f1f1f1; 
-} 
-</style> 
-</head> 
-<body> 
-
-<canvas id="myCanvas" width="100%" height="300"></canvas> 
-
-<script> 
-var canvas = document.getElementById('myCanvas'); 
-var context = canvas.getContext('2d'); 
-
-var carWidth = 75; 
-var carHeight = 25; 
-var carX = canvas.width / 2 - carWidth / 2; 
-var carY = canvas.height - carHeight - 10; 
-var speed = 0; 
-
-var obstacleWidth = 50; 
-var obstacleHeight = 20; 
-var obstacleX = canvas.width / 2 - obstacleWidth / 2; 
-var obstacleY = 50; 
-
-function drawRoad() { 
-    context.beginPath(); 
-    context.moveTo(0, canvas.height / 2); 
-    context.lineTo(canvas.width, canvas.height / 2); 
-    context.strokeStyle = "#8b8b8b"; 
-    context.stroke(); 
-} 
-
-function drawCar() { 
-    context.beginPath(); 
-    context.rect(carX, carY, carWidth, carHeight); 
-    context.fillStyle = "#0000ff"; 
-    context.fill(); 
-} 
-
-function drawObstacle() { 
-    context.beginPath(); 
-    context.rect(obstacleX, obstacleY, obstacleWidth, obstacleHeight); 
-    context.fillStyle = "#ff0000"; 
-    context.fill(); 
-} 
-
-function moveLeft() { 
-    carX -= speed * (canvas.width / 450); 
-} 
-
-function moveRight() { 
-    carX += speed * (canvas.width / 450); 
-} 
-
-function moveUp() { 
-    carY -= speed * (canvas.width / 450); 
-    speed -= 5 * (canvas.width / 450); 
-} 
-
-function moveDown() { 
-    carY += speed * (canvas.width / 450); 
-    speed += 5 * (canvas.width / 450); 
-} 
-
-function collision() { 
-    if(carX < obstacleX + obstacleWidth && 
-       carX + carWidth > obstacleX && 
-       carY < obstacleY + obstacleHeight && 
-       carHeight + carY > obstacleY) {
-           alert('Collision!'); 
-       } 
-} 
-
-function gameLoop() { 
-    context.clearRect(0, 0, canvas.width, canvas.height); 
-    drawRoad(); 
-    drawObstacle(); 
-    drawCar(); 
-    collision(); 
-} 
-
-setInterval(gameLoop, 30); 
-
-canvas.addEventListener("touchstart", handleTouchStart, false);
-canvas.addEventListener("touchmove", handleTouchMove, false);
-
-var xDown = null;
-var yDown = null;
-
-function handleTouchStart(evt) {
-    xDown = evt.touches[0].clientX;
-    yDown = evt.touches[0].clientY;
-}
-
-function handleTouchMove(evt) {
-    if (!xDown || !yDown) {
-        return;
-    }
-
-    var xUp = evt.touches[0].clientX;
-    var yUp = evt.touches[0].clientY;
-
-    var xDiff = xDown - xUp;
-    var yDiff = yDown - yUp;
-
-    if (Math.abs(xDiff) > Math.abs(yDiff)) {
-        if (xDiff > 0) {
-            moveLeft();
-        } else {
-            moveRight();
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Flappy Bird</title>
+    <style>
+        canvas {
+            border: 1px solid black;
         }
-    } else {
-        if (yDiff > 0) {
-            moveUp();
-        } else {
-            moveDown();
-        }
-    }
-
-    xDown = null;
-    yDown = null;
-
-    evt.preventDefault();
-}
-</script> 
-</body> 
+    </style>
+</head>
+<body>
+    <canvas id="canvas" width="288" height="512"></canvas>
+    <script src="game.js"></script>
+</body>
 </html>
